# circ-das

./: Cargo.toml  README.md  claims.toml
bench_results/: das.md  dn.md  spike.md  throughput.md
examples/: throughput.rs
src/: block_circulant.rs  das.rs  gf256.rs  grs.rs  lib.rs  neon.rs  rs2d.rs
tests/: das_soundness.rs  invariant_erasure.rs
